Closed Bug 1271003 Opened 8 years ago Closed 8 years ago

Record whether we've used DXVA in the crash reports

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox48 --- fixed
firefox49 --- fixed

People

(Reporter: jrmuizel, Assigned: ernest)

Details

Attachments

(1 file)

I don't think we do this and it would be helpful.
Component: Audio/Video → Audio/Video: Playback
Comment on attachment 8756977 [details]
MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

https://reviewboard.mozilla.org/r/55510/#review52262
Attachment #8756977 - Flags: review?(jmuizelaar) → review+
Comment on attachment 8756977 [details]
MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

https://reviewboard.mozilla.org/r/55510/#review52264

::: dom/media/platforms/wmf/DXVA2Manager.cpp:612
(Diff revision 1)
>  HRESULT
>  D3D11DXVA2Manager::Init(nsACString& aFailureReason)
>  {
>    HRESULT hr;
>  
> +  ScopedGfxFeatureReporter reporter("D3D11DXVA2");

nitpicking here but for some reason we're using DXVA2D3D11 in our string (telemetry, gfxCriticalNotes) so it might be easier to keep this consistent in both places.
Attachment #8756977 - Flags: review?(bgirard) → review+
Comment on attachment 8756977 [details]
MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/55510/diff/1-2/
Attachment #8756977 - Attachment description: MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports → MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel
https://hg.mozilla.org/mozilla-central/rev/20c1a4ec995f
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Could you backport this to aurora?
Flags: needinfo?(eyim)
Comment on attachment 8756977 [details]
MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

Approval Request Comment
[Feature/regressing bug #]: https://bugzilla.mozilla.org/show_bug.cgi?id=1271003
[User impact if declined]: No logging to see DXVA loaded (initialized)
[Describe test coverage new/current, TreeHerder]: Been in landed to inbound for ~4 days, https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=20c1a4ec995f 
[Risks and why]: None
Flags: needinfo?(eyim)
Attachment #8756977 - Flags: approval-mozilla-aurora?
Comment on attachment 8756977 [details]
MozReview Request: Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

more info, taking it
Attachment #8756977 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: