Bug 1271003 - Record whether we've used DXVA in crash reports r=BenWa,jrmuizel

MozReview-Commit-ID: 3nIwpdqSZS1